# app/controllers/api/v1/cities_controller.rb
@@ -10,4 +10,20 @@ class Api::V1::CitiesController < Api::V1::BaseController
     render json: cities
   end
 
+  def create
+    attributes = city_create_params
+    city = City.new(attributes)
+    if city.save
+      render json: city, status: :created
+    else
+      render_errors city.errors, :unprocessable_entity
+    end
+  end
+
+  private
+
+  def city_create_params
+    params.require(:city).permit(:name, :icon)
+  end
+
 end
